[package]
name = "jeffersonville"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["time", "timezone"]
categories = ["date-and-time"]
description = "A simple, lightweight, Olson-free timestamp and timezone library"
repository = "https://github.com/hoosiernational/Jeffersonville"
authors = ["James Oglesby <ohiorivernerd@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
